--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,12 +36,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   dio: ^5.4.2+1
-  json_annotation: ^4.8.1
   shimmer: ^3.0.0
   cached_network_image: ^3.3.1
   webview_flutter: ^4.7.0
   firebase_core: ^2.27.0
   firebase_auth: ^4.17.8
+  cloud_firestore: ^4.16.0
+  shared_preferences: ^2.2.2
+  uuid: ^4.3.3
 
 dev_dependencies:
   flutter_test:
@@ -53,8 +55,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  json_serializable: ^6.7.1
-  build_runner: ^2.4.9
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
