--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   shared_preferences: ^2.2.2
   uuid: ^4.3.3
   intl: ^0.19.0
+  firebase_crashlytics: ^3.5.1
+  firebase_analytics: ^10.10.1
 
 dev_dependencies:
   flutter_test:
