--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   cloud_firestore: ^4.16.0
   firebase_core: ^2.27.0
   firebase_auth: ^4.17.8
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
