--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   firebase_core: ^2.27.0
   firebase_auth: ^4.17.8
   provider: ^6.1.2
+  firebase_messaging: ^14.9.1
 
 dev_dependencies:
   flutter_test:
