--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   firebase_auth: ^4.17.8
   provider: ^6.1.2
   firebase_messaging: ^14.9.1
+  flutter_local_notifications: ^17.1.1
 
 dev_dependencies:
   flutter_test:
