--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   cloud_firestore: ^4.16.0
   firebase_core: ^2.27.0
   firebase_auth: ^4.17.8
+  flutter_local_notifications: ^17.1.1
+  firebase_messaging: ^14.9.1
 
 dev_dependencies:
   flutter_test:
